crates/libs/frieze/tests/ui/unsupported_generic_nested.stderr
error: frieze: generic type parameters in field type are not supported.
 --> tests/ui/unsupported_generic_nested.rs:9:12
  |
9 |     field: Wrapper<u32>,
  |            ^^^^^^^^^^^^
